--- a/my-app/package.json
+++ b/my-app/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "gh-pages -d out --nojekyll"
   },
   "dependencies": {
     "@splinetool/react-spline": "^4.0.0",
