--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : "https://jamesaliev.github.io/",
+  "homepage" : "https://jamesaliev.ca/",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
