--- a/my-app/package.json
+++ b/my-app/package.json
@@ -15,7 +15,8 @@
     "@splinetool/react-spline": "^4.0.0",
     "next": "15.1.5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "emailjs-com": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
